# KIMM_FSD

./: README.md
Isaac_ml/: package.xml  setup.cfg  setup.py
Isaac_ml/config/: isaac_sim_settings.yaml
Isaac_ml/isaac_ml/scripts/: start_sim.py
Isaac_ml/map/: map_vertex.yaml
Isaac_ml/meshes/: drone_link.STL
Isaac_ml/meshes/kimm_4ws/: camera_link.dae  fl_wheel_link.dae  fr_wheel_link.dae  lidar_link.dae  rl_wheel_link.dae  rr_wheel_link.dae
Isaac_ml/meshes/kimm_orchard/collision/: l_bogie_link.stl  l_roll_static_link.stl  l_wheel_link.stl  l_wheel_rotate_link.stl  ouster_os0.stl  r_bogie_link.stl  r_roll_static_link.stl  r_wheel_link.stl  r_wheel_rotate_link.stl  roll_balance_link.stl
Isaac_ml/meshes/kimm_orchard/visual/: arm1_link.dae  arm3_link.dae  arm4_link.dae  arm5_link.dae  l_roll_static_link.dae  r_roll_static_link.dae  roll_balance_link.dae
Isaac_ml/meshes/world/: KIMM_CITY_VER1.usd
Isaac_ml/meshes/world/orchard_map/urdf/: orchard_geometry.sdf  orchard_geometry.urdf  orchard_geometry.urdf.xacro
Isaac_ml/meshes/world/unstructured_orchard/: Scrawny_Tree1.usdc  grass_plain.usdc  grassy_ground.usdc  ground1.usdc  ground_temp.usd
Isaac_ml/scripts/: keyboard_teleop.py  start_sim.py
Isaac_ml/usd/drone_frame/: drone_frame.usd
Isaac_ml/usd/kimm_4ws/: city.usd
Isaac_ml/usd/kimm_city/: kimm_city.usda
Isaac_ml/usd/kimm_orchard_4ws/rover/: rover_temp.usd
Isaac_ml/usd/unstructured_orchard/: unstructured_orchard.usda  unstructured_orchard_distribution.usda
isaac_sim/config/: isaac_sim_settings.yaml
isaac_sim/scripts/: check_usd.py  start_sim.py
keepout/: CMakeLists.txt  package.xml
keepout/launch/: keepout.launch.py
keepout/maps/: keepout_map.pgm  keepout_map.yaml  projection_noground.pgm
keepout/params/: keepout_params.yaml
pcd_cal/: CMakeLists.txt
pcd_cal/config/: tree_grid_real_gps.yaml  tree_grid_sim.yaml  visualization_pcd_file.yaml
pcd_cal/maps/: map_tree.yaml
pcd_cal/script/: pcd_to_png.py  pcd_to_png_with_cell_ransac.py
pcd_cal/src/: laser_scan.cpp  map_to_pcl_parser.cpp  map_to_pcl_parser_sim.cpp  pcd_visualization.cpp
pointcloud_to_2dmap/: CMakeLists.txt  pointcloud_to_2dmap.cpp
pointcloud_to_2dmap/src/: pointcloud_to_2dmap.cpp
simulation/: CMakeLists.txt  package.xml
simulation/launch/: kimm_city.launch.py
simulation/models/kimm_city/: model.sdf
simulation/src/: polygon_publisher_node.cpp
src/scout_ros2/scout_base/include/scout_base/: scout_messenger.hpp
src/scout_ros2/scout_base/launch/: scout_base.launch.py  scout_mini_base.launch.py
src/scout_ros2/scout_description/: model.config
src/scout_ros2/scout_description/launch/: scout_base_description.launch.py
src/scout_ros2/scout_description/urdf/: scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro  sensors.xacro
src/simulation/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/simulation/include/simulation/: polygon_costmap_layer.hpp
src/simulation/launch/: kimm_city.launch.py  kimm_city_with_polygon.launch.py  test_polygon.launch.py
src/simulation/models/kimm_city/: model.config  model.sdf
src/simulation/models/kimm_city/meshes/: KIMM_CITY_VER1.stl
src/simulation/rviz/: polygon_visualization.rviz
src/simulation/src/: kimm_city_node.cpp  polygon_costmap_layer.cpp  polygon_publisher_node.cpp
src/simulation/worlds/: kimm_city.world
